--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.4.5",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "firebase": "^11.3.1",
     "numeral": "^2.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -22,7 +23,8 @@
     "react-redux": "^9.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.2.0",
-    "react-spinners": "^0.15.0"
+    "react-spinners": "^0.15.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
