--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,16 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
-    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "cros": "^1.0.1",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
-    "stripe": "^17.6.0"
+    "stripe": "^17.7.0"
   }
 }
